--- a/backend/package.json
+++ b/backend/package.json
@@ -22,6 +22,8 @@
     "express": "^5.1.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.16.0",
+    "nodemailer": "^7.0.5",
+    "resend": "^4.7.0",
     "validator": "^13.15.15"
   }
 }
