--- a/backend/package.json
+++ b/backend/package.json
@@ -24,6 +24,7 @@
     "mongoose": "^8.16.0",
     "nodemailer": "^7.0.5",
     "resend": "^4.7.0",
+    "socket.io": "^4.8.1",
     "validator": "^13.15.15"
   }
 }
